--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb://admin:admin123@mongo_container:27017/todo_db?authSource=admin
+MONGO_URI=mongodb://admin:admin123@172.31.26.212:27017/todo_db?authSource=admin
 MONGO_DB=todo_db
 MONGO_COLLECTION=tasks
 #;lkjhgfdslkjhgflkj
