--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -24,7 +24,7 @@ services:
     depends_on:
       - mongo
     environment:
-      MONGO_URI: mongodb://admin:admin123@mongo:27017/todo_db?authSource=admin
+      MONGO_URI: mongodb://admin:admin123@172.31.26.142:27017/todo_db?authSource=admin
       MONGO_DB: todo_db
       MONGO_COLLECTION: tasks
 
